--- a/PackageEasy/PackageEasy/Styles/Converters.xaml
+++ b/PackageEasy/PackageEasy/Styles/Converters.xaml
@@ -5,4 +5,5 @@
     <converters:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"></converters:BoolToVisibilityConverter>
     <converters:Base64ToImageConverter x:Key="Base64ToImageConverter"></converters:Base64ToImageConverter>
     <converters:BoolRevolveConverter x:Key="BoolRevolveConverter"></converters:BoolRevolveConverter>
+    <converters:KeyToLangDescConverter x:Key="KeyToLangDescConverter"></converters:KeyToLangDescConverter>
 </ResourceDictionary>
