--- a/PackageEasy/PackageEasy/Files/Language/En-US.xaml
+++ b/PackageEasy/PackageEasy/Files/Language/En-US.xaml
@@ -1,6 +1,10 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:sys="clr-namespace:System;assembly=mscorlib">
+    <sys:String x:Key="Format_Colon">:</sys:String>
+    <sys:String x:Key="None">None</sys:String>
+    <sys:String x:Key="Sure">Yes</sys:String>
+    
     <!--Main interface-->
     <sys:String x:Key="MainFile">File</sys:String>
     <sys:String x:Key="MainNewFile">New</sys:String>
@@ -78,7 +82,14 @@
     <sys:String x:Key="AssemblAddFile">Add a single file</sys:String>
     <sys:String x:Key="AssemblAddMultiFile">Add multiple files</sys:String>
     <sys:String x:Key="AssemblAddDir">Add folder</sys:String>
-
+    <sys:String x:Key="AssemblExistUnCopy">Do not copy if exists</sys:String>
+    <sys:String x:Key="AssemblUnDelete">Do not delete</sys:String>
+    <sys:String x:Key="AssemblNeedCopy">Whether to copy</sys:String>
+    <sys:String x:Key="AssemblInstallType">Installation method</sys:String>
+    <sys:String x:Key="AssemblIgnore">Ignore</sys:String>
+    <sys:String x:Key="MultiTargetDirPathChanged">There are multiple current selections. Do you want to update all target directories?</sys:String>
+    
+    
     <!--Application icon-->
     <sys:String x:Key="AppIconMenuName">Application&quot;Start Menu&quot;Folder name:</sys:String>
     <sys:String x:Key="AppIconAllowChangeMenuName">Allows users to change the "Start Menu" folder name</sys:String>
@@ -140,8 +151,9 @@
     <sys:String x:Key="SettingDisplay">Display settings</sys:String>
     <sys:String x:Key="SettingCompilePath">Compiler path:</sys:String>
     <sys:String x:Key="SettingNsisHelper">Help documentation:</sys:String>
+    <sys:String x:Key="SettingLanguage">Language:</sys:String>
     <sys:String x:Key="SettingTheme">Theme:</sys:String>
-
+    
     <!--cs interface-->
     <!--Main interface cs-->
     <sys:String x:Key="MainExportScriptTips">Convert to relative path?</sys:String>
@@ -159,7 +171,7 @@
 
     <!--Basic information interface cs-->
     <sys:String x:Key="BaseInfoEnglish">English</sys:String>
-    <sys:String x:Key="BaseInfoChinese">中文</sys:String>
+    <sys:String x:Key="BaseInfoChinese">Chinese</sys:String>
     <sys:String x:Key="BaseInfoAppNameNotEmpty">The application name cannot be empty!</sys:String>
     <sys:String x:Key="BaseInfoFileVersionFormat">The file version format must be X.X.X.X (X is a number)!</sys:String>
     <sys:String x:Key="BaseInfoOutPutFileName">The output file name cannot be empty!</sys:String>
@@ -190,7 +202,12 @@
     <sys:String x:Key="AssemblyNullFileList">There is currently no file list!</sys:String>
     <sys:String x:Key="AssemblyFileIsNull">The current file {0} is empty!</sys:String>
     <sys:String x:Key="AssemblyFileNotExist">Cannot find file {0} in workspace!</sys:String>
-
+    <sys:String x:Key="AssemblyIgnoreSuccess">Ignore success!</sys:String>
+    <sys:String x:Key="AssemblyUnIgnoreSuccess">Cancel ignore successfully!</sys:String>
+    <sys:String x:Key="AssemblyFileList">File list</sys:String>
+    <sys:String x:Key="AssemblyIgnoreFileList">Ignore file list</sys:String>
+    <sys:String x:Key="AssemblyUnIgnore">Remove ignore</sys:String>
+    
     <!--End interface-->
     <sys:String x:Key="EndUninstallTip">Are you sure you want to completely remove $(^Name) and all its components?</sys:String>
     <sys:String x:Key="EndUninstallMsg">$(^Name) was successfully removed from your computer.</sys:String>
