--- a/PackageEasy/PackageEasy/Views/AppIconInfoView.xaml
+++ b/PackageEasy/PackageEasy/Views/AppIconInfoView.xaml
@@ -6,7 +6,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PackageEasy.Views"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800" Foreground="{DynamicResource baseForeground}">
 
     <Grid>
         <Grid.RowDefinitions>
@@ -20,9 +20,9 @@
             <TextBox Width="220"  HorizontalAlignment="Left" Height="30" Text="{Binding StartMenuName,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" Margin="5,0,0,0" Style="{StaticResource CommonTextBox}"></TextBox>
         </StackPanel>
         <StackPanel Orientation="Vertical" Grid.Row="1"  Margin="10,10,0,0" >
-            <CheckBox d:Content="允许用户更改&quot;开始菜单文&quot;件夹名称" Content="{DynamicResource AppIconAllowChangeMenuName}" IsChecked="{Binding IsCanChangeStartMenuName,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" ></CheckBox>
-            <CheckBox d:Content="在&quot;开始菜单&quot;文件夹创建互联网快捷方式" Content="{DynamicResource AppIconStartShortCuts}" Margin="0,10,0,0" IsChecked="{Binding IsCreateWebUrl,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" ></CheckBox>
-            <CheckBox d:Content="在&quot;开始菜单&quot;创建解除安装图标" Content="{DynamicResource AppIconStartUninstallShortCuts}" Margin="0,10,0,0" IsChecked="{Binding IsCreateUnInstall,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" ></CheckBox>
+            <CheckBox d:Content="允许用户更改&quot;开始菜单文&quot;件夹名称" Foreground="{DynamicResource baseForeground}" Content="{DynamicResource AppIconAllowChangeMenuName}" IsChecked="{Binding IsCanChangeStartMenuName,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" ></CheckBox>
+            <CheckBox d:Content="在&quot;开始菜单&quot;文件夹创建互联网快捷方式" Foreground="{DynamicResource baseForeground}" Content="{DynamicResource AppIconStartShortCuts}" Margin="0,10,0,0" IsChecked="{Binding IsCreateWebUrl,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" ></CheckBox>
+            <CheckBox d:Content="在&quot;开始菜单&quot;创建解除安装图标" Foreground="{DynamicResource baseForeground}" Content="{DynamicResource AppIconStartUninstallShortCuts}" Margin="0,10,0,0" IsChecked="{Binding IsCreateUnInstall,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" ></CheckBox>
         </StackPanel>
         <DataGrid Grid.Row="2" Margin="10,10,10,0" Style="{StaticResource DataGridStyle}"
                   BorderBrush="{DynamicResource borderBrush}" 
