--- a/PackageEasy/PackageEasy/Views/RegistryView.xaml
+++ b/PackageEasy/PackageEasy/Views/RegistryView.xaml
@@ -8,7 +8,7 @@
              xmlns:controls="https://dicgo.com/controls"
              xmlns:helpers="clr-namespace:PackageEasy.Common.Helpers;assembly=PackageEasy.Common"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800" Foreground="{DynamicResource baseForeground}">
 
     <Grid  Margin="30,20,0,0" HorizontalAlignment="Left">
         <Grid.ColumnDefinitions>
@@ -31,13 +31,13 @@
             <RowDefinition Height="*" ></RowDefinition>
         </Grid.RowDefinitions>
         <TextBlock d:Text="注册文件格式:" Text="{DynamicResource RegistryFormat}" Margin="0,10,0,0" Grid.Row="0"  VerticalAlignment="Center" HorizontalAlignment="Right" ></TextBlock>
-        <controls:PlaceholderTextBox Grid.Column="1" d:PlaceHolderText="示例: .pge,.pky" PlaceHolderText="{DynamicResource RegistryExample}" Text="{Binding RegistryFormat,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"  Grid.Row="0" Width="220" Height="30" Style="{StaticResource  PlaceholderTextBoxStyle}" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="5,10,0,0"></controls:PlaceholderTextBox>
-        <CheckBox Grid.Column="2" d:Content="可选组件" Content="{DynamicResource RegistryCanChooseSection}" IsChecked="{Binding IsAsSelected}" Margin="5,10,0,0"   VerticalAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Center"></CheckBox>
+        <controls:PlaceholderTextBox Grid.Column="1" CaretBrush="{DynamicResource baseForeground}"  Foreground="{DynamicResource baseForeground}" d:PlaceHolderText="示例: .pge,.pky" PlaceHolderText="{DynamicResource RegistryExample}" Text="{Binding RegistryFormat,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"  Grid.Row="0" Width="220" Height="30" Style="{StaticResource  PlaceholderTextBoxStyle}" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="5,10,0,0"></controls:PlaceholderTextBox>
+        <CheckBox Grid.Column="2" d:Content="可选组件" Foreground="{DynamicResource baseForeground}" Content="{DynamicResource RegistryCanChooseSection}" IsChecked="{Binding IsAsSelected}" Margin="5,10,0,0"   VerticalAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Center"></CheckBox>
         <TextBlock d:Text="注册进程:" Margin="0,10,0,0" Grid.Row="6" Text="{DynamicResource RegistryProcessName}" VerticalAlignment="Center" HorizontalAlignment="Right" ></TextBlock>
-        <controls:PlaceholderTextBox Grid.Column="1" d:PlaceHolderText="例如:PackageEasy.exe" PlaceHolderText="{DynamicResource RegistryProcessExample}"  Grid.Row="6" Width="220" MinHeight="30" Style="{StaticResource PlaceholderTextBoxStyle}"   TextWrapping="Wrap" Text="{Binding ProcessName,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="5,10,0,0"></controls:PlaceholderTextBox>
+        <controls:PlaceholderTextBox Grid.Column="1"  CaretBrush="{DynamicResource baseForeground}"  Foreground="{DynamicResource baseForeground}" d:PlaceHolderText="例如:PackageEasy.exe" PlaceHolderText="{DynamicResource RegistryProcessExample}"  Grid.Row="6" Width="220" MinHeight="30" Style="{StaticResource PlaceholderTextBoxStyle}"   TextWrapping="Wrap" Text="{Binding ProcessName,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="5,10,0,0"></controls:PlaceholderTextBox>
 
         <TextBlock d:Text="密码:" Margin="0,10,0,0" Grid.Row="7" Text="{DynamicResource RegistryPassword}" VerticalAlignment="Center" HorizontalAlignment="Right" ></TextBlock>
-        <PasswordBox Grid.Column="1" Grid.Row="7" Width="220" IsEnabled="{Binding IsUsePassword}" MinHeight="30" Style="{StaticResource CommonPasswordBox}" helpers:PasswordHelper.Attach="True" helpers:PasswordHelper.Password="{Binding Password,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Left" VerticalContentAlignment="Center" Margin="5,10,0,0"></PasswordBox>
-        <CheckBox d:Content="启用密码" Content="{DynamicResource RegistryEnablePassword}" IsChecked="{Binding IsUsePassword,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" Grid.Column="2" VerticalContentAlignment="Center" VerticalAlignment="Center" Grid.Row="7"  Margin="5,10,0,0"></CheckBox>
+        <PasswordBox Grid.Column="1" Foreground="{DynamicResource baseForeground}" Grid.Row="7" Width="220" IsEnabled="{Binding IsUsePassword}" MinHeight="30" Style="{StaticResource CommonPasswordBox}" helpers:PasswordHelper.Attach="True" helpers:PasswordHelper.Password="{Binding Password,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Left" VerticalContentAlignment="Center" Margin="5,10,0,0"></PasswordBox>
+        <CheckBox d:Content="启用密码" Foreground="{DynamicResource baseForeground}" Content="{DynamicResource RegistryEnablePassword}" IsChecked="{Binding IsUsePassword,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" Grid.Column="2" VerticalContentAlignment="Center" VerticalAlignment="Center" Grid.Row="7"  Margin="5,10,0,0"></CheckBox>
     </Grid>
 </UserControl>
