--- a/PackageEasy/PackageEasy/Views/Tools/PlugInManagerControl.xaml
+++ b/PackageEasy/PackageEasy/Views/Tools/PlugInManagerControl.xaml
@@ -7,7 +7,7 @@
              xmlns:controls="clr-namespace:PackageEasy.Controls.Controls;assembly=PackageEasy.Controls"
              xmlns:lang="clr-namespace:PackageEasy.Common.Data;assembly=PackageEasy.Common"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800" >
+             d:DesignHeight="450" d:DesignWidth="800"  Foreground="{DynamicResource baseForeground}"  >
     <Grid>
         <ItemsControl ItemsSource="{Binding PlugIns}" Margin="10">
             <ItemsControl.ItemsPanel>
@@ -33,7 +33,7 @@
                                         <RowDefinition Height="auto"></RowDefinition>
                                     </Grid.RowDefinitions>
                                     <TextBlock Style="{StaticResource IconFontStyle}" FontSize="35" Foreground="Red" Text="{Binding Icon}"></TextBlock>
-                                    <TextBlock Grid.Row="1" Text="{Binding DisplayName}" HorizontalAlignment="Center"></TextBlock>
+                                    <TextBlock Grid.Row="1" Text="{Binding DisplayName}"  Foreground="{DynamicResource baseForeground}"  HorizontalAlignment="Center"></TextBlock>
                                     <!--<Border x:Name="border" Visibility="Collapsed" Background="Transparent" Opacity="0.5">
                                         <Grid>
                                             <TextBlock x:Name="install" Visibility="Collapsed" HorizontalAlignment="Center" Text="安装" lang:LanguageManager.LangText="安装" VerticalAlignment="Center"></TextBlock>
